--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 body {
 	margin: 0;
 	padding: 10px;
-	font-family: Verdana, Geneva, sans-serif;
+	font-family: "Lucida Console", Monaco, monospace;
 	background-color: #ECEFF1;
 }
 
