--- a/css/style.css
+++ b/css/style.css
@@ -1,106 +1,122 @@
-
 /* SITE */
 
 body {
-	margin: 0;
-	padding: 10px;
-	font-family: "Lucida Console", Monaco, monospace;
-	background-color: #ECEFF1;
+    margin: 0;
+    padding: 0;
+    font-family: "Lucida Console", Monaco, monospace;
+    background-color: #ECEFF1;
+    display: table;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+h1 {
+    margin-top: 0;
+}
+
+.content {
+    display: table-cell;
+    vertical-align: middle;
 }
 
 .post-content {
-	margin: auto;
-	position: relative;
-	max-width: 600px;
+    margin: auto;
+    position: relative;
+    max-width: 600px;
 }
 
 .name {
-	margin-bottom: 0px;
-	font-size: 3em;
+    margin-bottom: 0px;
+    font-size: 3em;
 }
 
 .description {
-	font-size: 1em;
+    font-size: 1em;
 }
 
 a {
-	text-decoration: none;
-	cursor: pointer;
-	border: none;
+    text-decoration: none;
+    cursor: pointer;
+    border: none;
 }
 
 .button {
-	color: #FFFFFF;
+    color: #FFFFFF;
 }
 
 .button-default {
-	transition: all 0.2s ease-in-out;
-	background: #37474F;
-	padding: 10px;
-	height: auto;
-	display: inline-block;
-	font-size: 1.1em;
+    transition: all 0.2s ease-in-out;
+    background: #37474F;
+    padding: 10px;
+    height: auto;
+    display: inline-block;
+    font-size: 1.1em;
 }
 
 .button-default:hover {
-	box-shadow: 0 0 10px #888;
-	transform: scale(1.1, 1.1);
+    box-shadow: 0 0 10px #888;
+    transform: scale(1.1, 1.1);
 }
 
 footer.fixed {
-	left: 0;
-	right: 0;
-	bottom: 0;
-	position: fixed;
-	z-index: 1;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+    z-index: 1;
 }
 
 ul {
-	list-style-type: none;
-	padding: 0;
+    list-style-type: none;
+    padding: 0;
 }
 
 .icons li {
-	display: inline;
-	word-spacing: 20px;
+    display: inline;
+    word-spacing: 20px;
 }
 
 .icon {
-	transition: all 0.2s ease-in-out;
-	max-width: 15px;
+    transition: all 0.2s ease-in-out;
+    max-width: 20px;
 }
 
 .icon:hover {
-	transform: scale(1.5, 1.5);
+    transform: scale(1.5, 1.5);
 }
 
 footer .links ul li {
-	display: inline;
+    display: inline;
 }
 
 footer .links ul li a {
-	color: #000;
+    color: #000;
 }
 
 footer .links ul li a:hover {
-	text-decoration: underline;
+    text-decoration: underline;
 }
 
 
 /* HELPERS */
 
 .p-t-60 {
-	padding-top: 60px;
+    padding-top: 60px;
 }
 
 .p-b-80 {
-	padding-bottom: 80px;
+    padding-bottom: 80px;
 }
 
 .m-t-40 {
-	margin-top: 40px;
+    margin-top: 40px;
+}
+
+.m-t-60 {
+    margin-top: 60px;
 }
 
 .center {
-	text-align: center;
+    text-align: center;
 }
