--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: "Lucida Console", Monaco, monospace;
+    font-family: Verdana, Geneva, sans-serif;
     background-color: #ECEFF1;
     display: table;
     position: absolute;
