--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI Variable, Segoe UI,
+    system-ui, ui-sans-serif, Helvetica, Arial, sans-serif, Apple Color Emoji,
+    Segoe UI Emoji;
   display: table;
   position: absolute;
   height: 100%;
