--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,55 +1,83 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI Variable, Segoe UI,
-        system-ui, ui-sans-serif, Helvetica, Arial, sans-serif, Apple Color Emoji,
-        Segoe UI Emoji;
-    display: table;
-    position: absolute;
-    height: 100%;
-    width: 100%;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-img {
-    display: block;
+body {
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI Variable,
+    Segoe UI,
+    system-ui,
+    ui-sans-serif,
+    Helvetica,
+    Arial,
+    sans-serif,
+    Apple Color Emoji,
+    Segoe UI Emoji;
 }
 
 .container {
-    max-width: 93.5rem;
-    margin: 0 auto;
-    padding: 0 2rem;
-    margin-top: 2em;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 .gallery {
-    display: flex;
-    flex-wrap: wrap;
-    margin: -1rem -1rem;
-    padding-bottom: 3rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 20px;
 }
 
 .gallery-item {
-    position: relative;
-    flex: 1 0 22rem;
-    margin: 1rem;
-    color: #fff;
-    cursor: pointer;
+  position: relative;
+  overflow: hidden;
 }
 
-.gallery-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.gallery-item img {
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: transform 0.3s ease;
 }
 
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
-    grid-gap: 2rem;
+.gallery-item:hover img {
+  transform: scale(1.1);
 }
 
-.gallery-item,
-.gallery {
-    width: auto;
-    margin: 0;
+.gallery-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.gallery-item:hover .gallery-overlay {
+  opacity: 1;
+}
+
+/* .gallery-image { */
+/*   cursor: pointer; */
+/* } */
+
+.gallery-overlay-icon {
+  font-size: 48px;
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  .gallery {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 10px;
+  }
 }
