--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,8 @@ a {
 .nav-links a {
   color: #000;
   text-decoration: underline;
-  margin-right: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .button {
